<resources>
    <string name="app_name">Lucky Lab Calculator</string>
    <string name="second_Page">Hello World</string>
    <string name="settings">Settings</string>
    <string name="count_in">Count In</string>
    <string name="home">Home</string>
    <string name="tip_out">Tip Out</string>
    <string name="submit">Submit</string>
    <string name="nickles">Enter Number of Nickles</string>
    <string name="dimes">Enter Number of Dimes</string>
    <string name="quarters">Enter Number of Quarters</string>
    <string name="numNic">Number of nickels</string>
    <string name="welcome">Welcome to the Lucky Lab Drawer Calculator</string>
    <string name="ones">Enter Number of Ones</string>
    <string name="fives">Enter Number of Fives</string>
    <string name="tens">Enter Number of Tens</string>
    <string name="twenties">Enter Number of Twenties</string>
    <string name="grandTotal">Grand Total</string>
    <string name="tip">Enter Tip Amount</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="setting">Settings</string>
</resources>
