<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.neongarage.CountInActivity">


    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:onClick="handleSubmitClick"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_view" />

    <TextView
        android:id="@+id/coin_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Coin Total"
        app:layout_constraintBottom_toTopOf="@+id/dollar_view"
        app:layout_constraintEnd_toStartOf="@+id/twentites_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quarters_count" />

    <EditText
        android:id="@+id/fives_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fives"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/dimes_count"
        app:layout_constraintBottom_toTopOf="@+id/tens_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dimes_count"
        app:layout_constraintTop_toBottomOf="@+id/ones_count" />

    <EditText
        android:id="@+id/ones_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ones"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/nickles_count"
        app:layout_constraintBottom_toTopOf="@+id/fives_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickles_count"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/twentites_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/twenties"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/total_view"

        app:layout_constraintBaseline_toBaselineOf="@id/coin_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin_view"
        app:layout_constraintTop_toBottomOf="@+id/tens_count" />

    <TextView
        android:id="@+id/dollar_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Dollar Total"
        app:layout_constraintBottom_toTopOf="@+id/result_view"
        app:layout_constraintEnd_toStartOf="@+id/twentites_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_view" />

    <EditText
        android:id="@+id/quarters_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quarters"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/coin_view"
        app:layout_constraintEnd_toStartOf="@+id/tens_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dimes_count" />

    <EditText
        android:id="@+id/dimes_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dimes"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/quarters_count"
        app:layout_constraintEnd_toStartOf="@+id/fives_count"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickles_count" />

    <EditText
        android:id="@+id/nickles_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickles"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/dimes_count"
        app:layout_constraintEnd_toStartOf="@+id/ones_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tens_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tens"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/quarters_count"
        app:layout_constraintBottom_toTopOf="@+id/twentites_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quarters_count"
        app:layout_constraintTop_toBottomOf="@+id/fives_count" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Result"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollar_view" />

    <TextView
        android:id="@+id/total_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/grandTotal"
        app:layout_constraintBottom_toTopOf="@+id/result_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dollar_view"

        app:layout_constraintBaseline_toBaselineOf="@id/dollar_view"
        app:layout_constraintTop_toBottomOf="@+id/twentites_count" />


</android.support.constraint.ConstraintLayout>